starting alignment of videolist component, shrunk images, need to fix font sizes and then break into pieces

--- a/src/components/PostedComments/PostedComments.scss
+++ b/src/components/PostedComments/PostedComments.scss
@@ -1,4 +1,5 @@
 .posted {
+  padding: 0rem 1rem;
   &__container {
     display: flex;
   }
