--- a/src/components/VideoList/VideoList.scss
+++ b/src/components/VideoList/VideoList.scss
@@ -1,4 +1,15 @@
+.videolist {
+  &__container {
+    padding: 0rem 1rem;
+  }
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
 .videolist__img {
-  height: 12.5rem;
-  width: 12.5rem;
+  height: 3rem;
+  width: 3rem;
 }
